src/styles.css
* {
  overflow-x: hidden;
  font-family: 'Josefin Sans', sans-serif;
}


#header {
  /* padding-top: 1%; */
}

#logo-area{
  width: 300px;
  display: inline-block;
  position: absolute;
  top: 0;
  left: 0;
  padding-top: 1%;

}

.logo{
  font-family: 'Pacifico', cursive;
  font-size: 3rem;
  overflow-y: hidden;
  margin-bottom: 0 !important;
  padding-left: 5%;
  line-height: normal;
}


#user-menu {
  float: right;
  position: absolute;
  width: 200px;
  margin-right: 10px;
  display: inline-block;
  position: relative;
  top: 0;
  right: 0;
  padding-top: 3%;
  /* border: 1px solid; */
}

.user-icon{
  display: inline;
  padding-right: 10%;
}

#mainmenu{
  text-align: center;
  font-family: 'Josefin Sans', sans-serif;
}

.menu_item{
  padding: 4px 16px;
  color: inherit;
  text-decoration: none;
  font-size: 2rem;
}

#promo{
  min-width: 100%;
  padding: 10px 10px;
}

.responsive-promo{
  height: 600px;
  width: 97%;
  display: block;
  margin-left: auto;
  margin-right: auto;
}

#featured_section{
  display: inline-block;
  padding: 10px 10px;
  margin-left: 1%;
}

.feat_item{
  width: 25%;
  height: 600px;
  display: inline-block;
  padding: 10px 10px;
  overflow-y: hidden;
  text-align: center;
  cursor: pointer;
}

.feat_pic{
  min-width: inherit;
  height: 500px;
}


.feat_name{
  margin-bottom: 10px;
  text-decoration: none;
  color: inherit;
  display: block;
  cursor: pointer;
  font-family: 'Josefin Sans', sans-serif;
  font-size: 1.5rem;
}

#item-area{
  display: grid;
  grid-template-columns: 25% 75%;
  margin: 30px 30px;
  align-items: stretch;
  overflow-y: hidden;
  position: relative;
}

#side-menu{
  /* background-color: #33bced; */
  min-height: 100vh;
  overflow-y: hidden;
}

.size-box{

}

.size-box ul{
  list-style-type: none;
}

/* Customize the label (the container) */
.container {
 display: block;
 position: relative;
 padding-left: 35px;
 margin-bottom: 12px;
 cursor: pointer;
 font-size: 22px;
 -webkit-user-select: none;
 -moz-user-select: none;
 -ms-user-select: none;
 user-select: none;
}

/* Hide the browser's default checkbox */
.container input {
 position: absolute;
 opacity: 0;
 cursor: pointer;
 height: 0;
 width: 0;
}

/* Create a custom checkbox */
.checkmark {
 position: absolute;
 top: 0;
 left: 0;
 height: 25px;
 width: 25px;
 background-color: #eee;
}

/* On mouse-over, add a grey background color */
.container:hover input ~ .checkmark {
 background-color: #ccc;
}

/* When the checkbox is checked, add a blue background */
.container input:checked ~ .checkmark {
 background-color: #2196F3;
}

/* Create the checkmark/indicator (hidden when not checked) */
.checkmark:after {
 content: "";
 position: absolute;
 display: none;
}

/* Show the checkmark when checked */
.container input:checked ~ .checkmark:after {
 display: block;
}

/* Style the checkmark/indicator */
.container .checkmark:after {
 left: 9px;
 top: 5px;
 width: 5px;
 height: 10px;
 border: solid white;
 border-width: 0 3px 3px 0;
 -webkit-transform: rotate(45deg);
 -ms-transform: rotate(45deg);
 transform: rotate(45deg);
}

.color-list{
  height: 80px;
  overflow-y: scroll;
}

.swatch{
  display: inline-block;
  height: 20px;
  width: 20px;
  margin-right: 4%;
  border: grey 1px solid;
}

.color-swatch-black{
  background-color: black;
}

.color-swatch-blue{
  background-color: blue;
}

.color-swatch-red{
  background-color: red;
}

.color-swatch-green{
  background-color: green;
}

.color-swatch-grey{
  background-color: grey;
}

.color-swatch-white{
  background-color: white;
}

.color-swatch-purple{
  background-color: purple;
}

.color-swatch-yellow{
  background-color: yellow;
}

.color-swatch-brown{
  background-color: brown;
}

.color-swatch-orange{
  background-color: orange;
}

.color-swatch-pink{
  background-color: pink;
}

.color-swatch-nude{
  background-color: #fce2d1;
}

#item-grid{
  /* background-color: #50D050; */
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  grid-auto-rows: min(600px, auto);
  grid-gap: 30px;
  padding-left: 50px;
  /* height: 100vh;
  min-height: 100vh; */
  overflow-y: hidden;
}

.item-product{
  height: 600px;
}

.item{
  height: 500px;
}

#checkout_section{
}

.checkout-item-pic{
  height: 300px;
  width: 300px;
}


#footer{
  text-align: center;
  justify-content: center;
  display: flex;
  flex-direction: row;
}

.footer_item{
  margin-left: 30px;
  margin-right: 30px;
  width: 200px;
  text-align: center;
}

.footer_item ul{
  padding: 0 !important;
  list-style: none;
}

.pointer{
  cursor: pointer;
}

#search-bar{
  display: inline-block;
  position: absolute;
  top: 40px;
  right: 220px;
  /* padding-top: 10px; */
}

input[type=text] {
  width: 200px;
  box-sizing: border-box;
  border: 2px solid #ccc;
  border-radius: 4px;
  font-size: 16px;
  background-color: white;
  /* background-image: url('searchicon.png'); */
  background-repeat: no-repeat;
  padding: 12px 20px 12px 40px;
  -webkit-animation: fadein 1s; /* Safari, Chrome and Opera > 12.1 */
  -moz-animation: fadein 1s; /* Firefox < 16 */
  -ms-animation: fadein 1s; /* Internet Explorer */
  -o-animation: fadein 1; /* Opera < 12.1 */
  animation: fadein 1s;
}

@keyframes fadein {
    from { opacity: 0; }
    to   { opacity: 1; }
}

/* Firefox < 16 */
@-moz-keyframes fadein {
    from { opacity: 0; }
    to   { opacity: 1; }
}

/* Safari, Chrome and Opera > 12.1 */
@-webkit-keyframes fadein {
    from { opacity: 0; }
    to   { opacity: 1; }
}

/* Internet Explorer */
@-ms-keyframes fadein {
    from { opacity: 0; }
    to   { opacity: 1; }
}

/* Opera < 12.1 */
@-o-keyframes fadein {
    from { opacity: 0; }
    to   { opacity: 1; }
}

